gitops/manifests/kube-prometheus-stack/grafana-tailscale-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-tailscale
  namespace: monitoring
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "grafana"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: kps
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
